<!DOCTYPE resources [<!ENTITY server "192.168.42.39:3000/"> <!ENTITY website "www.iiitkota.ac.in/">]>
<resources>
    <string name="app_name">IIITK ERP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error">An error occurred!</string>
    <string name="invalid_credentials">Invalid credentials!</string>

    <!--URLs for API services-->
    <string name="url_login">http://&server;service/authenticate/login</string>
    <string name="url_register">http://&server;service/authenticate/register</string>
    <string name="url_forgot">http://&server;service/authenticate/forgotPassword</string>
    <string name="url_logout">http://&server;service/authenticate/logout</string>
    <string name="url_reset">http://&server;service/authenticate/resetPassword</string>
    <string name="url_updateProfile">http://&server;service/authenticate/updateProfile</string>
    <string name="url_getProfile">http://&server;service/authenticate/getProfile</string>

    <string name="url_events">http://&website;service/event/getEvent</string>
    <string name="url_news">http://&website;service/news/getNews</string>
    <string name="invitation_for_nomination_of_vayoshrestha_samman_2018">Invitation for Nomination of Vayoshrestha Samman 2018</string>
    <string name="_2018_04_30">2018-04-30</string>
    <string name="iiit_kota_celebrated_international_yoga_day_on_june_21_2017_in_mnit_jaipur_campus_how_to_avoid_stress_in_present_day_circumstances_and_stress_management_in_general_were_discussed">IIIT Kota celebrated International Yoga Day on June 21, 2017 in MNIT Jaipur Campus. How to avoid stress in present day circumstances and stress management in general were discussed.</string>
    <string name="download_the_invitation_here">Download the Invitation here</string>

</resources>
