<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:elevation="100dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:textAlignment="center"
            android:text="@string/invitation_for_nomination_of_vayoshrestha_samman_2018"
            android:textColor="@color/indigo100"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:text="@string/_2018_04_30"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/cyan100"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/date"
            android:layout_marginTop="5dp"
            android:background="@color/indigo400" />
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/iiit_kota_celebrated_international_yoga_day_on_june_21_2017_in_mnit_jaipur_campus_how_to_avoid_stress_in_present_day_circumstances_and_stress_management_in_general_were_discussed"
            android:textColor="@color/grey100"
            android:textSize="18sp" />

        <Button
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/grey300"
            android:text="@string/download_the_invitation_here"
            android:textAllCaps="false"
            android:backgroundTint="#80c5cae9"/>

    </LinearLayout>
</android.support.v7.widget.CardView>